# equity-data-agent

./: .dockerignore  .env.example  .env.sops  .gitignore  .gitleaks.toml  .mcp.json  .sops.yaml  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  dagster.yaml  docker-compose.yml  litellm_config.yaml  pyproject.toml  skills-lock.json  workspace.yaml
.claude/: settings.json
.claude/agents/: README.md  code-reviewer-ediff.md  ops-investigator.md
.claude/commands/: change-scope.md  cycle-end.md  cycle-start.md  fix.md  go.md  implement.md  pick.md  resume.md  retro.md  review.md  sanity-check.md  server-audit.md  session-check.md  ship.md  start-session.md  status.md  sync-docs.md  sync-linear.md
.claude/hooks/: auto-format.sh  check-uncommitted.sh  protect-repo.sh  session-start.sh
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  llm-eval.yml  security-weekly.yml
.security/: waivers.md
clickhouse/config.d/: system-log-ttl.xml
clickhouse/users.d/: grafana-readonly.xml
docs/: AC-templates.md  INDEX.md  design-frontend-plan.md  model-bench-2026-04.md  model-bench-2026-07.md  patterns.md  project-plan-archive.md  project-plan.md  project-requirement.md
docs/api/: data.http  health.http  reports.http  search.http  tickers.http
docs/architecture/: system-overview.md
docs/assessments/: agent-analyst-quality-2026-05-18.md  agent-analyst-voice-2026-07.md
docs/decisions/: 001-clickhouse-over-postgres.md  002-monorepo-uv-workspaces.md  003-intelligence-vs-math.md  004-batch-ingestion-over-streaming.md  005-nextjs-vercel-over-python-native-frontend.md  006-multi-timeframe-via-aggregation.md  007-minimal-agent-graph-first.md  008-no-vercel-ai-sdk.md  009-embedding-via-qdrant-cloud-inference.md  010-dagster-production-topology.md  011-llm-routing-groq-default-claude-override.md  011-llm-routing-groq-default-gemini-override.md  012-domain-conventions-in-reports-not-prompts.md  013-stay-on-bespoke-compose-not-coolify.md  014-nextjs-rendering-mode-per-page.md  015-news-source-and-sentiment-topology.md  016-news-publisher-canonicalisation-and-cross-ticker-storage.md  017-public-chat-truly-public-no-auth.md  018-cloudflare-quick-tunnel-for-https-ingress.md  019-langfuse-callbackhandler-over-per-node-observe.md  020-equity-analyst-voice.md  021-synthesis-model-and-tail-routing.md  TEMPLATE.md  (+10 more)
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  vercel.json
migrations/: 000_create_database_equity_raw.sql  000_create_databases.sql  001_create_database_equity_derived.sql  003_create_ohlcv_raw.sql  004_create_fundamentals.sql  005_create_news_raw.sql  006_create_ohlcv_weekly.sql  007_create_ohlcv_monthly.sql  007_create_technical_indicators_weekly.sql  008_create_technical_indicators_daily.sql  008_create_technical_indicators_monthly.sql  011_create_fundamental_summary.sql  012_alter_news_raw_add_publisher_name.sql  013_alter_news_raw_add_image_url.sql  014_alter_news_raw_add_sentiment_label.sql  015_alter_technical_indicators_daily_add_extra.sql  016_alter_technical_indicators_weekly_add_extra.sql  017_alter_technical_indicators_monthly_add_extra.sql  018_alter_fundamental_summary_add_ebitda_margin_pct.sql  019_alter_fundamental_summary_add_gross_margin_bps_yoy.sql  020_alter_fundamental_summary_add_net_margin_bps_yoy.sql  021_alter_fundamental_summary_add_revenue_ttm.sql  022_alter_fundamental_summary_add_net_income_ttm.sql  023_alter_fundamental_summary_add_fcf_ttm.sql  024_alter_news_raw_add_resolved_host.sql  025_alter_fundamentals_add_implied_shares_outstanding.sql  026_schema_migrations_and_comments.sql  027_create_ingest_rejects.sql  028_create_earnings_releases_raw.sql  029_create_earnings_calendar.sql  030_alter_fundamentals_implied_shares_nullable.sql  031_alter_fundamentals_shares_outstanding_nullable.sql  032_alter_fundamentals_total_debt_nullable.sql  033_alter_fundamentals_cash_nullable.sql  034_comment_fundamentals_nullable_semantics.sql  035_remove_implied_shares_default.sql  036_alter_fundamentals_ebitda_nullable.sql  037_alter_fundamentals_market_cap_nullable.sql  038_comment_fundamentals_ebitda_market_cap.sql  039_null_legacy_ttm_ebitda_values.sql
scripts/: backfill_finnhub_news.py  bench_gather_latency.py  compare_news_density.py  docker-events-notify.service  docker-events-notify.sh  drop_qdrant_news_collection.py  health-monitor.sh  load_test_baseline.py  migrate_clickhouse.py  obs-status.sh  obs_smoke.py  push_prompts.py  smoke_deepseek_cache_schema.py  smoke_openrouter_providers.py  smoke_small_alias.py  verify_earnings_corpus.py  verify_news_feeds.py
tests/: conftest.py  test_integration_gate.py  test_migrate_clickhouse.py  test_no_orphan_tests.py  test_obs_smoke.py
(+204 files in other folders)
