[project]
name = "equity-data-agent"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/shared",
    "packages/dagster-pipelines",
    "packages/api",
    "packages/agent",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    # QNT-160 — security scanners; pinned versions so CI and local parity.
    "pip-audit>=2.10.1",
    "bandit>=1.8.0",
    # QNT-261: deterministic IR metrics (recall@k / MRR / nDCG) for the retrieval
    # eval. DEV-ONLY on purpose: the eval harness (agent.evals.retrieval_eval)
    # runs in CI/local, never on the prod runtime path, and ir-measures pulls the
    # pytrec-eval-terrier C-extension (no aarch64 wheel -> needs gcc). Keeping it
    # out of the agent package's runtime deps keeps `uv sync --no-dev` (the prod
    # image build) free of a compiler toolchain + scipy.
    "ir-measures>=0.3.3",
    # QNT-264: LLM-judged RAG generation eval (RAGAS metric set + custom G-Eval),
    # pytest-native. DEV-ONLY for the same reason as ir-measures: the DeepEval
    # suite (agent.evals.deepeval_eval) runs nightly / on-dispatch / locally,
    # never on the prod runtime path, and pulls a large judged-eval dependency
    # tree we don't want in the `uv sync --no-dev` prod image.
    "deepeval>=4.0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live ClickHouse (auto-skipped locally without tunnel)",
    "eval: deterministic RAG eval gate (ir_measures + number-grounding; no LLM, no network) -- QNT-261",
    "deepeval: LLM-judged RAG generation eval (DeepEval RAGAS set + G-Eval); needs live stack + LLM keys; off the per-PR hot path -- QNT-264",
]

[tool.bandit]
# QNT-160 — only scan first-party code. Tests legitimately use assert/random/
# subprocess in ways bandit flags as risky in production code; we don't want
# the gate to brick on test fixtures. Skip rules listed in skips[] are
# documented in .security/waivers.md.
exclude_dirs = ["tests", ".venv", "node_modules", "frontend"]
# B101 — assert_used: pytest tests use assert by design; we already exclude
# tests/, but a few module-level invariant asserts in agent/api are
# intentional and trip B101 even outside tests.
skips = ["B101"]
